--- a/src/layout/Header/Header.module.css
+++ b/src/layout/Header/Header.module.css
@@ -1,4 +1,11 @@
 .header {
     height: 5%;
-    background-color: hsl(100, 75%, 75%);
+    background-color: rgb(140, 0, 29);
+}
+
+.headerText {
+    float: left;
+    text-align: center;
+    color: white;
+    padding: .25em;
 }
