--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .page {
+    @apply flex p-4 w-full min-h-full
+  }
+}
+
 :root {
 
   font-synthesis: none;
