--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .page {
-    @apply flex p-4 w-full min-h-full
+    @apply flex p-8 w-full h-full overflow-y-auto
   }
 }
 
